--- a/estate_vehicle/views/estate_vehicle_master_formula.xml
+++ b/estate_vehicle/views/estate_vehicle_master_formula.xml
@@ -14,7 +14,7 @@
                     <field name="category_unit_id" string="Unit" options="{'no_create_edit': True}"/>
                     <field name="job_id" string="Job" options="{'no_create_edit': True}"/>
                     <field name="basis" string="Basis" />
-                    <field name="premi_base" string="Premi Basis"/>
+                    <field name="premi_base" string="Piece Rate Basis"/>
                     <field name="use_start" string="Use Start"/>
                     <field name="use_end" string="Use End"/>
                 </tree>
