--- a/estate_vehicle/views/estate_vehicle_path.xml
+++ b/estate_vehicle/views/estate_vehicle_path.xml
@@ -8,12 +8,12 @@
                 <tree editable="bottom">
                     <field name="name" string="Path Name"/>
                     <field name="start_location" string="Start Location" options="{'no_create_edit': True}"/>
-                    <field name="end_location" string="end_lcoation"
+                    <field name="end_location" string="End Location"
                            options="{'no_create_edit': True}"/>
                     <field name="factor_id" string="Factor"/>
-                    <field name="distance_location"/>
-                    <field name="path_price" />
-                    <field name="comment"/>
+                    <field name="distance_location" string="Distance Location"/>
+                    <field name="path_price" string="Path Price"/>
+                    <field name="comment" string="Comment"/>
                 </tree>
             </field>
         </record>
@@ -26,7 +26,7 @@
             <field name="arch" type="xml">
                 <form>
                     <group>
-                        <field name="name"/>
+                        <field name="name" string="Name"/>
                     </group>
                     <group>
                         <group name="detail" string="Detail Location Path">
@@ -34,7 +34,7 @@
                             <field name="end_location" string="End Location"/>
                         </group>
                         <group name="price" string="Detail price">
-                            <field name="distance_location"/>
+                            <field name="distance_location" string="Distance Location"/>
                             <field name="path_price" string="Price Location"/>
                             <field name="comment"/>
                         </group>
