--- a/hr_fingerprint_ams/views/inherited_hr_attendance_view.xml
+++ b/hr_fingerprint_ams/views/inherited_hr_attendance_view.xml
@@ -9,7 +9,7 @@
                 <xpath expr="//sheet" position="before">
                     <header>
                         <field name="state" widget="statusbar"
-                               statusbar_visible="draft,confirmed,approved,payslip"/>
+                               statusbar_visible="draft,payslip"/>
                     </header>
                 </xpath>
             </field>
